# Jump

./: .gitignore  LICENSE  evaluate.py  once.py  readme.md  requirements.txt  train.py  train_pose_vae.py  vis_mocap.py  vis_record.py
Kinematic/: CMakeLists.txt  KinematicCore.cpp  KinematicCore.h  KinematicCore.i
Kinematic/convhull/: CMakeLists.txt  convhull_3d.h  convhull_volume.cpp  convhull_volume.h
Kinematic/utils/: BodyTools.cpp  BodyTools.h  ButterworthFilter.cpp  ButterworthFilter.h  CMakeLists.txt  CharParser.cpp  CharParser.h  CharPose.cpp  CharPose.h  Descriptor.cpp  Descriptor.h  common.h  ts.cpp  ts.h
algorithm/: GAE.py  __init__.py  runner.py
algorithm/ppo/: PPO_vec.py  __init__.py  data_tools.py
data/characters/: humanoid3d_jumper60kg.txt
data/contacts/: cartwheel.txt  crawl.txt  knee.txt  roll.txt
data/motions/beyond/: VC5_Run_jumpToBox_01.txt  VC5_high_jump__fosbury_flop_06.txt  VC5_high_jump__scissor_01.txt  VC5_high_jump__straddle_02.txt  VC5_sprint__curves_03.txt
data/records/: jumper_run_p1.yaml
data/states/: jumper_run_p1.npy
data/urdf/humanoid/: humanoid.urdf  humanoid60kg.urdf
data/urdf/jumper/: bar.urdf  block.urdf  bracket.urdf  carpet.urdf  real_block.urdf  slice.urdf  wall.urdf
env/: __init__.py  base.py  joint_limit.py  sample_recorder.py  vae_env.py
env/jumper/: __init__.py  block.py  highjump.py  jumper_run.py  jumper_run2.py  wall.py  wall_scheduler.py
env/vec_env/: __init__.py  spawner.py  subproc_vec_env.py  vec_env.py
model/: __init__.py  abstract_policy.py  normalizer.py  utils.py
model/actor_critic/: __init__.py  actor.py  critic.py  explore_scheduler.py  loader.py
presets/: __init__.py  loader.py
presets/custom/: jump.yaml  no_render.yaml  runup.yaml
presets/default/: experiment.yaml
presets/default/algorithm/: algorithm.yaml  gae.yaml  ppo.yaml
presets/default/env/: env.yaml  highjump.yaml  jumper_run.yaml  jumper_run2.yaml
presets/default/model/: actor.yaml
presets/env_override/: jumper_run.yaml  jumper_run2.yaml
presets/plugins/: unity_renderer.yaml
scheduler/: __init__.py  abstract_scheduler.py  global_schedulers.py
sim/: __init__.py  bullet_client.py  character.py  plane.py  scene_object.py  sim_pybullet.py
ur/: __init__.py  unity_renderer.py  ur_object.py
utils/: bell.py  contact_manager.py  feature.py  gpu.py  humanoid_kin.py  humanoid_mocap.py  motion_recorder.py  quaternion.py  sigmoid.py  vae.py
(+92 files in other folders)
